--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,6 +27,9 @@ jobs:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       run: |
+        wget https://downloads.mongodb.com/compass/mongodb-mongosh_2.5.1_amd64.deb &&\
+        apt install ./mongodb-mongosh_2.5.1_amd64.deb &&\
+        apt install postgresql-client &&\
         make install &&\
         make test
 
